--- a/style.css
+++ b/style.css
@@ -6,9 +6,14 @@
     margin: 0;
 }
 
+body {
+    background-color: #f9fcff;
+}
+
 header {
     color: white;
     height: 100vh;
+    background-size: cover;
     background-image: url(Headerimg.png);
 }
 
@@ -21,7 +26,8 @@ header {
 }
 
 .nav>.nav-header {
-    display: inline;
+    display: inline-flex;
+    align-items: center;
 }
 
 .nav>.nav-header>.nav-title {
@@ -60,12 +66,21 @@ header {
     display: none;
 }
 
-@media (max-width:1000px) {
+@media (max-width:1088px) {
     .nav>.nav-btn {
         display: inline-block;
         position: absolute;
         right: 0px;
         top: 0px;
+    }
+
+    .nav>.nav-header>.nav-title {
+        font-size: 14px;
+        padding-left: 0px;
+    }
+
+    .nav-header>.img {
+        padding-left: 0px;
     }
 
     .nav>.nav-btn>label {
@@ -151,6 +166,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .card {
@@ -201,11 +218,11 @@ header {
     font-family: 'Red Hat Display', sans-serif;
     font-size: 27px;
     font-weight: 700;
-    margin-left: 70px;
+    margin-left: 80px;
 }
 
 .serv-dtxt {
-    margin-left: 70px;
+    margin-left: 80px;
     font-family: 'Manrope', sans-serif;
     color: #213175;
     font-weight: 500;
@@ -296,13 +313,13 @@ header {
     margin-bottom: 60px;
 }
 
-@media only screen and (max-width: 1000px) {
-    .cards, .directions, .about, .main-text, .ginv {
+@media only screen and (max-width: 1088px) {
+    .cards, .directions, .about, .main-text, .ginv, .con-items {
         flex-direction: column;
         text-align: center;
     }
 
-    .serv-htxt, .abt-txt, .serv-dtxt {
+    .serv-htxt, .abt-txt, .serv-dtxt, .contact {
         text-align: center;
         margin-left: 0;
     }
@@ -336,6 +353,10 @@ header {
         width: 100%;
         margin-top: 40px;
     }
+
+    form {
+        width: 100%;
+    }
 }
 
 .ginv {
@@ -357,10 +378,14 @@ header {
     margin-bottom: 20px;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1090px) {
 
 .worker {
     margin-right: 40px;
+}
+
+form {
+    width: 50%;
 }
 
 }
@@ -389,4 +414,72 @@ header {
     text-decoration: none;
     color: #213175;
     font-family: 'DM Sans', sans-serif;
+}
+
+.contact {
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 30px;
+}
+
+.con-items {
+    display: flex;
+}
+  
+.con-head {
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 27px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.contact-text {
+    width: 50%;
+    margin-right: 40px;
+}
+
+.contact-text > p {
+    font-family: 'DM Sans', sans-serif;
+    margin-bottom: 10px;
+}
+
+button {
+    background: #625CC9;
+    border: none;
+    color: white;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-family: 'DM Sans', sans-serif;
+    border-radius: 10px;
+    font-weight: 500;
+    margin-top: 20px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+input, textarea {
+    background: #FFFFFF;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+border: none;
+padding: 10px;
+    width: 100%;
+}
+
+label {
+    display: inline-block;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+input {
+    margin-bottom: 20px;
+}
+
+textarea {
+    height: 150px;
 }
