--- a/nav.css
+++ b/nav.css
@@ -153,7 +153,9 @@
 }
 
 .logo-txt {
-    margin-top: -17px; font-size: 18px; font-weight: 600;
+    text-decoration: none;
+    margin-top: -17px; font-size: 17px; font-weight: 600;
+    color: white;
 }
 
 @media (max-width: 470px) {
