--- a/about.css
+++ b/about.css
@@ -50,3 +50,17 @@ header {
     margin: 1em;
     text-decoration: none;
 }
+
+footer {
+    margin-top: 50px;
+    text-align: center;
+    font-family: 'DM Sans', sans-serif;
+    border-top: 1px solid black;
+    /* background: linear-gradient(180deg, #d3d7e8, #ebf0f6); */
+}
+
+footer > p {
+    padding: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
