--- a/services.css
+++ b/services.css
@@ -130,6 +130,10 @@
     margin-bottom: 1em;
 }
 
+.main-info > img {
+  width: 90%;
+}
+
 header {
     height: 100vh;
     background-image: url(https://99designs-blog.imgix.net/blog/wp-content/uploads/2018/12/Gradient_builder_2.jpg?auto=format&q=60&w=1815&h=1200&fit=crop&crop=faces);
