--- a/about.css
+++ b/about.css
@@ -39,6 +39,24 @@ header {
     font-family: 'DM Sans', sans-serif;
 }
 
+.o-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width: 1088px) {
+    .o-links {
+        flex-direction: column;
+    }
+}
+
+.o-links > a {
+    color: #503B7C;
+    font-weight: 600;
+    font-size: 20px;
+}
+
 .content h2 {
     margin-top: 50px;
     font-family: 'Red Hat Display', sans-serif;
