--- a/home.css
+++ b/home.css
@@ -61,7 +61,7 @@ header {
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     margin-left: 40px;
     margin-right: 40px;
 }
