change backgrounds of some pages

--- a/mission.css
+++ b/mission.css
@@ -1,6 +1,6 @@
 header {
     height: 100vh;
-    background-image: url(https://res.cloudinary.com/practicaldev/image/fetch/s--F7w_snYb--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/vda3askm2sbfjl717q9q.png);
+    background-image: url(mission-head.jpgÊ);
     background-size: cover;
 }
 
