--- a/services.css
+++ b/services.css
@@ -141,8 +141,9 @@
 
 header {
     height: 100vh;
-    background-image: url(https://99designs-blog.imgix.net/blog/wp-content/uploads/2018/12/Gradient_builder_2.jpg?auto=format&q=60&w=1815&h=1200&fit=crop&crop=faces);
+    background-image: url(services-head.jpg);
     background-size: cover;
+    color: white;
 }
 
 .text > h1 {
