--- a/services.css
+++ b/services.css
@@ -93,6 +93,10 @@
   .main-info {
     width: 55%
   }
+
+  .serv-text {
+    margin-left: 30px;
+  }
     
 }
 
@@ -101,6 +105,7 @@
 
   .serv-text {
     text-align: center;
+    margin-left: 0px;
   }
   
   .tab-info {
@@ -158,7 +163,6 @@ header {
 .serv-text {
     font-size: 22px;
     font-weight: 700;
-    margin-left: 30px;
     margin-top: 25px;
     font-family: 'Red Hat Display', sans-serif;
 }
