fixing a typo on mission css

--- a/mission.css
+++ b/mission.css
@@ -1,6 +1,6 @@
 header {
     height: 100vh;
-    background-image: url(mission-head.jpgÊ);
+    background-image: url(mission-head.jpg);
     background-size: cover;
 }
 
