--- a/gallery.css
+++ b/gallery.css
@@ -66,3 +66,16 @@ header {
       max-width: 100%;
     }
   }
+
+  footer {
+    text-align: center;
+    font-family: 'DM Sans', sans-serif;
+    border-top: 1px solid black;
+    /* background: linear-gradient(180deg, #d3d7e8, #ebf0f6); */
+}
+
+footer > p {
+    padding: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
